server.log
nohup: ignoring input
node:internal/modules/package_json_reader:92
        throw error;
        ^

SyntaxError: Error parsing /home/thebobsomest1/trust-ai/projects/prophecytrackerai/package.json: Unexpected token { in JSON at position 282
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:79:16)
    at readPackage (node:internal/modules/package_json_reader:140:10)
    at readPackageScope (node:internal/modules/package_json_reader:157:19)
    at shouldUseESMLoader (node:internal/modules/run_main:77:15)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:122:24)
    at node:internal/main/run_main_module:28:49 {
  path: '/home/thebobsomest1/trust-ai/projects/prophecytrackerai/package.json'
}

Node.js v18.20.4
